@@ -150,7 +150,7 @@ class PendingReadOp implements Enumeration<LedgerEntry>, ReadEntryCallback {
                 // we are done, the read has failed from all replicas, just fail the
                 // read
 
-                // Do it a bit perssimistically, only when finished trying all replicas
+                // Do it a bit pessimistically, only when finished trying all replicas
                 // to check whether we received more missed reads than maxMissedReadsAllowed
                 if (BKException.Code.BookieHandleNotAvailableException == firstError &&
                     numMissedEntryReads > maxMissedReadsAllowed) {
